--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -68,6 +68,7 @@
   </table>
 
 	<div id='testdpi' style='height: 1in; left: -100%; position: absolute; top: -100%; width: 1in;'></div>
+    <div class="hidden"><span class="cssLH" id="testLH">css line height hopefully with Times New Roman</span></div>
 
   <!-- TABLE 2: User Agent - useragent.js -->
   <table id="tb2">
@@ -102,7 +103,7 @@
       <td><span style="font-family: Arimo, DejaVu Serif, Adobe Blank Not Linux;">Linux</span>
         <span style="font-family: Lucida Grande, Adobe Blank Not Mac;">Mac</span>
         <span style="font-family: Segoe UI, Adobe Blank Not Windows;">Windows</span></td></tr>
-    <tr><td>[css line-height] os</td><td></td></tr>
+    <tr><td>[css line-height] os</td><td id="cssLH"></td></tr>
     <tr><td><div class="tooltip"><code>[i]</code>
       <span class="tooltiptext">relies on accurate<br>zoom detection</span></div> [scrollbar width] os <sup>2, 3</sup></td><td></td></tr>
     <tr><td>[tcp/ip] os</td><td></td></tr>
