--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -105,7 +105,7 @@
         <span style="font-family: Segoe UI, Adobe Blank Not Windows;">Windows</span></td></tr>
     <tr><td>[css line-height] os</td><td id="cssLH"></td></tr>
     <tr><td><div class="tooltip"><code>[i]</code>
-      <span class="tooltiptext">relies on accurate<br>zoom detection</span></div> [scrollbar width] os <sup>2, 3</sup></td><td id="scrollbarWidth"></td></tr>
+      <span class="tooltiptext">not always accurate<br>when zoom is not 100%</span></div> [scrollbar width] os <sup>2, 3</sup></td><td id="scrollbarWidth"></td></tr>
     <tr><td>[tcp/ip] os</td><td></td></tr>
     <tr><td colspan="2"><span class="no_color">code based on work by </span>
       <sup>1</sup><a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/os-detection-font-css.html">Arthur Edelstein</a>
