--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -78,7 +78,9 @@
         <div class="nav-up"><a href="#screen">&#9650;</a></div>
         <div class="nav-down"><a href="#language">&#9660;</a></div></div>
     </th></tr></thead>
-    <tr><td colspan="2" class="intro"><span class="no_color">The <code>browser</code>, <code>version</code> and <code>os</code> tests are only to show how trivial it is to detect that you are using Firefox, the version and possibly your os.</span></td></tr>
+    <tr><td colspan="2" class="intro"><span class="no_color">The <code>browser</code>, <code>version</code> and <code>os</code> tests
+    are only to show how trivial it is to detect that you are using Firefox, the version and possibly your os. Extrapolating your os
+    from <code>css line-height</code> and <code>scrollbar width</code> are for fun - the actual entropy is the pixel value [per zoom setting].</span></td></tr>
     <tr><td>[header] http_user_agent</td><td></td></tr>
     <tr><td>[navigator] userAgent</td><td id="nUserAgent"></td></tr>
     <tr><td>[navigator] appCodeName</td><td id="nCodeName"></td></tr>
@@ -104,8 +106,7 @@
         <span style="font-family: Lucida Grande, Adobe Blank Not Mac;">Mac</span>
         <span style="font-family: Segoe UI, Adobe Blank Not Windows;">Windows</span></td></tr>
     <tr><td>[css line-height] os</td><td id="cssLH"></td></tr>
-    <tr><td><div class="tooltip"><code>[i]</code>
-      <span class="tooltiptext">not always accurate<br>when zoom is not 100%</span></div> [scrollbar width] os <sup>2, 3</sup></td><td id="scrollbarWidth"></td></tr>
+    <tr><td>[scrollbar width] os <sup>2, 3</sup></td><td id="scrollbarWidth"></td></tr>
     <tr><td>[tcp/ip] os</td><td></td></tr>
     <tr><td colspan="2"><span class="no_color">code based on work by </span>
       <sup>1</sup><a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/os-detection-font-css.html">Arthur Edelstein</a>
