--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -94,12 +94,12 @@
     <tr><td colspan="2" class="center">---browser, version, os---</td></tr>
     <tr><td>[css] browser</td><td id="fdResourceCss"></td></tr>
     <tr><td>[chrome://] browser</td><td id="fdResource"></td></tr>
-    <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext"><b>expm1(1)</b> and <b>sinh(1)</b></span></div> [math] browser</td><td id="fdMath"></td></tr>
-    <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext"><b>feature detection:</b>
+    <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext"><b>mozPaintCount:</b>
       <br>we could also use<br>mozGetAsFile<br>mozInnerScreenX<br>mozScreenX<br>oscpu<br>scrollMaxX</span>
-      </div> [mozPaintCount] browser</td><td id="fdPaintCount"></td></tr>
-    <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext"><b>feature detection:</b>
-      <br>firefox 60+ only</span></div> version</td><td id="versionNo"></td></tr>
+      </div> [feature detection] browser</td><td id="fdPaintCount"></td></tr>
+    <tr><td>[math] browser</td><td id="fdMath"></td></tr>
+    <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext">Firefox 60+ builds only</span>
+       </div> [feature detection] version</td><td id="versionNo"></td></tr>
     <tr><td><div class="tooltip"><code>[i]</code>
       <span class="tooltiptext">use_document_fonts<br>= 0 breaks this</span></div> [css] os <sup>1</sup></td>
       <td><span style="font-family: Arimo, DejaVu Serif, Adobe Blank Not Linux;">Linux</span>
@@ -107,7 +107,32 @@
         <span style="font-family: Segoe UI, Adobe Blank Not Windows;">Windows</span></td></tr>
     <tr><td>[css line-height] os</td><td id="cssLH"></td></tr>
     <tr><td>[scrollbar width] os <sup>2, 3</sup></td><td id="scrollbarWidth"></td></tr>
+    <tr><td>[math] os</td><td id="fdMathOS"></td></tr>
     <tr><td>[tcp/ip] os</td><td></td></tr>
+    <!--<tr><td>[math] ISA</td><td id="ISA"></td></tr>-->
+    <tr><td>----</td><td></td></tr>
+    <tr><td>[logic] everything</td><td></td></tr>
+    <tr><td colspan="2" class="showhide">
+        <input id="collapseM" class="toggle" type="checkbox" checked onchange="toggleitems(this, `M`)">
+        <label for="collapseM" class="lbl-toggle" id="labelM">&#9660; show details</label>
+    </td></tr>
+    <tr class="togM"><td>[browser] hash</td><td id="brmhash"></td></tr>
+    <tr class="togM"><td>atanh(0.5)</td><td id="brm1"></td></tr>
+    <tr class="togM"><td>expm1(1)</td><td id="brm2"></td></tr>
+    <tr class="togM"><td>sinh(1)</td><td id="brm3"></td></tr>
+    <tr class="togM"><td>----</td><td></td></tr>
+    <tr class="togM"><td>[os] hash</td><td id="osmhash"></td></tr>
+    <tr class="togM"><td>cos(1e251)</td><td id="osm1"></td></tr>
+    <tr class="togM"><td>cos(1e140)</td><td id="osm2"></td></tr>
+    <tr class="togM"><td>cos(1e12)</td><td id="osm3"></td></tr>
+    <tr class="togM"><td>cos(1e130)</td><td id="osm4"></td></tr>
+    <tr class="togM"><td>cos(1e272)</td><td id="osm5"></td></tr>
+    <tr class="togM"><td>cos(1e0)</td><td id="osm6"></td></tr>
+    <tr class="togM"><td>cos(1e284)</td><td id="osm7"></td></tr>
+    <tr class="togM"><td>cos(1e75)</td><td id="osm8"></td></tr>
+    <tr class="togM"><td>----</td><td></td></tr>
+    <tr class="togM"><td>[combined] hash</td><td id="comhash"></td></tr>
+    <tr class="togM"><td colspan="2"></td></tr>
     <tr><td colspan="2"><span class="no_color">code based on work by </span>
       <sup>1</sup><a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/os-detection-font-css.html">Arthur Edelstein</a>
       <span class="no_color">, </span>
@@ -130,7 +155,8 @@
     <tr><td>[navigator] languages[0]</td><td id="nLanguages0"></td></tr>
     <tr><td>[Intl.PluralRules] locale</td><td id="localeIPR"></td></tr>
     <tr><td>[resolvedOptions] locale</td><td id="localeRO"></td></tr>
-    <tr><td>time zone offsets</td><td id="tzOffsets"></td></tr>
+    <tr><td>timezone offsets</td><td id="tzOffsets"></td></tr>
+    <tr><td>[resolvedOptions] timezone</td><td id="tzRO"></td></tr>
     <tr><td>system date/time</td><td id="dateSystem"></td></tr>
     <tr><td>toString</td><td id="dateString"></td></tr>
     <tr><td>[long] toLocaleString</td><td id="lngdateLS"></td></tr>
