--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -101,14 +101,15 @@
     <tr><td>[math] browser</td><td id="fdMath"></td></tr>
     <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext">Firefox 60+ builds only</span>
        </div> [feature detection] version</td><td id="versionNo"></td></tr>
+    <tr><td>[chrome://] os</td><td id="fdResourceOS"></td></tr>
     <tr><td><div class="tooltip"><code>[i]</code>
       <span class="tooltiptext">use_document_fonts<br>= 0 breaks this</span></div> [css] os <sup>1</sup></td>
       <td><span style="font-family: Arimo, DejaVu Serif, Adobe Blank Not Linux;">Linux</span>
         <span style="font-family: Lucida Grande, Adobe Blank Not Mac;">Mac</span>
         <span style="font-family: Segoe UI, Adobe Blank Not Windows;">Windows</span></td></tr>
     <tr><td>[css line-height] os</td><td id="cssLH"></td></tr>
-    <tr><td>[scrollbar width] os <sup>2, 3</sup></td><td id="scrollbarWidth"></td></tr>
     <tr><td>[math] os</td><td id="fdMathOS"></td></tr>
+    <tr><td>[scrollbar width] os <sup>2, 3</sup></td><td id="scrollbarWidth"></td></tr>
     <tr><td>[tcp/ip] os</td><td></td></tr>
     <!--<tr><td>[math] ISA</td><td id="ISA"></td></tr>-->
     <!--<tr><td>----</td><td></td></tr>-->
