--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -103,11 +103,16 @@
        </div> [feature detection] version</td><td id="versionNo"></td></tr>
     <tr><td>[chrome://] os</td><td id="fdResourceOS"></td></tr>
     <tr><td><div class="tooltip"><code>[i]</code>
-      <span class="tooltiptext">use_document_fonts<br>= 0 breaks this</span></div> [css] os <sup>1</sup></td>
-      <td><span style="font-family: Arimo, DejaVu Serif, Adobe Blank Not Linux;">Linux</span>
-        <span style="font-family: Lucida Grande, Adobe Blank Not Mac;">Mac</span>
-        <span style="font-family: Segoe UI, Adobe Blank Not Windows;">Windows</span></td></tr>
+      <span class="tooltiptext">Linux, Mac or Windows:<br>use_document_fonts<br>= 0 may break this</span></div> [css] os <sup>1</sup></td>
+      <td>
+        <span id="fdCssOSL" style="font-family: Arimo, DejaVu Serif, Adobe Blank Not Linux;">Linux</span>
+        <span id="fdCssOSM" style="font-family: Lucida Grande, Adobe Blank Not Mac;">Mac</span>
+        <span id="fdCssOSW" style="font-family: Segoe UI, Adobe Blank Not Windows;">Windows</span>
+      </td>
+    </tr>
     <tr><td>[css line-height] os</td><td id="cssLH"></td></tr>
+    <tr><td><div class="tooltip"><code>[i]</code>
+      <span class="tooltiptext">three font test to<br>detect four OSes:<br> based on <b>[css] os</b></span></div> [font] os <sup>1</sup></td><td id="fontOS"></td></tr>
     <tr><td>[math] os</td><td id="fdMathOS"></td></tr>
     <tr><td>[scrollbar width] os <sup>2, 3</sup></td><td id="scrollbarWidth"></td></tr>
     <tr><td>[tcp/ip] os</td><td></td></tr>
