--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -67,10 +67,10 @@
       <sup>3</sup> <a target="_blank" class="blue" href="https://github.com/earthlng/testpages">earthlng</a></td></tr>
   </table>
 
-	<div id='testdpi' style='height: 1in; left: -100%; position: absolute; top: -100%; width: 1in;'></div>
+    <div id='testdpi' style='height: 1in; left: -100%; position: absolute; top: -100%; width: 1in;'></div>
     <div class="hidden"><span class="cssLH" id="testLH">css line height hopefully with Times New Roman</span></div>
 
-  <!-- TABLE 2: User Agent - useragent.js -->
+  <!-- TABLE 2: User Agent - part of screen.js-->
   <table id="tb2">
     <col width="35%"><a name="useragent"></a><col width="65%">
     <thead><tr><th colspan="2">
@@ -116,9 +116,6 @@
     <tr><td>[math] os</td><td id="fdMathOS"></td></tr>
     <tr><td>[scrollbar width] os <sup>2, 3</sup></td><td id="scrollbarWidth"></td></tr>
     <tr><td>[tcp/ip] os</td><td></td></tr>
-    <!--<tr><td>[math] ISA</td><td id="ISA"></td></tr>-->
-    <!--<tr><td>----</td><td></td></tr>-->
-    <!--<tr><td>[logic] everything</td><td></td></tr>-->
     <tr><td colspan="2"><span class="no_color">code based on work by </span>
       <sup>1</sup><a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/os-detection-font-css.html">Arthur Edelstein</a>
       <span class="no_color">, </span>
@@ -127,7 +124,7 @@
       <sup>3</sup> <a target="_blank" class="blue" href="https://github.com/earthlng/testpages">earthlng</a></td></tr>
   </table>
 
-  <!-- TABLE 3: Math - part of useragent.js-->
+  <!-- TABLE 3: Math - part of screen.js-->
   <table id="tb3">
     <col width="35%"><a name="math"></a><col width="65%">
     <thead><tr><th colspan="2">
@@ -499,7 +496,6 @@
 
   <script src="js/main.js"></script>
   <script src="js/screen.js"></script>
-  <script src="js/useragent.js"></script>
   <script src="js/language.js"></script>
   <script src="js/headers.js"></script>
   <script src="js/cookies.js"></script>
