--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -211,6 +211,7 @@
     <tr><td>[navigator] doNotTrack</td><td id="nDoNotTrack"></td></tr>
     <tr><td>http_upgrade_insecure_requests</td><td></td></tr>
     <tr><td>server_protocol</td><td></td></tr>
+    <tr><td>[api] network information</td><td id="nNetwork"></td></tr>
     <tr><td>[navigator] connection</td><td id="nConnection"></td></tr>
     <tr><td>[navigator] onLine</td><td id="nOnLine"></td></tr>
   </table>
