--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -305,6 +305,8 @@
     <tr><td colspan="2">Element.getBoundingClientRect</td><td colspan="2" id="dr2"></td></tr>
     <tr><td colspan="2">Range.getClientRects</td><td colspan="2" id="dr3"></td></tr>
     <tr><td colspan="2">Range.getBoundingClientRect</td><td colspan="2" id="dr4"></td></tr>
+    <tr><td colspan="4"></td></tr>
+    <tr><td colspan="4" class="center"><a target="_blank" class="blue" href="iframes/domrect.html">click here to view what is being rendered</a></td></tr>
     <tr><td colspan="4" class="showhide">
         <input id="collapseD" class="toggle" type="checkbox" checked onchange="toggleitems(this, `D`)"/>
         <label for="collapseD" class="lbl-toggle" id="labelD">&#9660; show details</label>
