--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -98,6 +98,7 @@
     <tr><td colspan="2" class="center">---browser, version, os---</td></tr>
     <tr><td>[css] browser</td><td id="fdResourceCss"></td></tr>
     <tr><td>[chrome://] browser</td><td id="fdResource"></td></tr>
+    <tr><td>[error messages] browser</td><td id="fdError"></td></tr>
     <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext"><b>mozPaintCount:</b>
       <br>we could also use<br>mozGetAsFile<br>mozInnerScreenX<br>mozScreenX<br>oscpu<br>scrollMaxX</span>
       </div> [feature detection] browser</td><td id="fdPaintCount"></td></tr>
