--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -157,18 +157,18 @@
         <label for="collapseM" class="lbl-toggle" id="labelM">&#9660; show details</label>
     </td></tr>
     <tr class="togM"><td></td><td class="sub3">ECMAScript 1st Edition</td></tr>
-      <tr class="togM"><td>cos(1e251)</td><td id="cos1"></td></tr>
-      <tr class="togM"><td>cos(1e140)</td><td id="cos2"></td></tr>
-      <tr class="togM"><td>cos(1e12)</td><td id="cos3"></td></tr>
-      <tr class="togM"><td>cos(1e130)</td><td id="cos4"></td></tr>
-      <tr class="togM"><td>cos(1e272)</td><td id="cos5"></td></tr>
-      <tr class="togM"><td>cos(1e0)</td><td id="cos6"></td></tr>
-      <tr class="togM"><td>cos(1e284)</td><td id="cos7"></td></tr>
-      <tr class="togM"><td>cos(1e75)</td><td id="cos8"></td></tr>
+      <tr class="togM"><td>cos(1e251)</td><td class="mono" id="cos1"></td></tr>
+      <tr class="togM"><td>cos(1e140)</td><td class="mono" id="cos2"></td></tr>
+      <tr class="togM"><td>cos(1e12)</td><td class="mono" id="cos3"></td></tr>
+      <tr class="togM"><td>cos(1e130)</td><td class="mono" id="cos4"></td></tr>
+      <tr class="togM"><td>cos(1e272)</td><td class="mono" id="cos5"></td></tr>
+      <tr class="togM"><td>cos(1e0)</td><td class="mono" id="cos6"></td></tr>
+      <tr class="togM"><td>cos(1e284)</td><td class="mono" id="cos7"></td></tr>
+      <tr class="togM"><td>cos(1e75)</td><td class="mono" id="cos8"></td></tr>
     <tr class="togM"><td></td><td class="sub3">ECMAScript 6th Edition</td></tr>
-      <tr class="togM"><td>atanh(0.5)</td><td id="math1"></td></tr>
-      <tr class="togM"><td>expm1(1)</td><td id="math2"></td></tr>
-      <tr class="togM"><td>sinh(1)</td><td id="math3"></td></tr>
+      <tr class="togM"><td>atanh(0.5)</td><td class="mono" id="math1"></td></tr>
+      <tr class="togM"><td>expm1(1)</td><td class="mono" id="math2"></td></tr>
+      <tr class="togM"><td>sinh(1)</td><td class="mono" id="math3"></td></tr>
     <tr class="togM"><td colspan="2"></td></tr>
     <tr><td colspan="2"><span class="no_color">ECMAScript 6th edition math code courtesy of </span>
       <a target="_blank" class="blue" href="https://fpcentral.tbb.torproject.org/">Fingerprint Central</a></td></tr>
