--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -190,7 +190,7 @@
         <input id="collapseC" class="toggle" type="checkbox" checked onchange="toggleitems(this, `C`)">
         <label for="collapseC" class="lbl-toggle" id="labelC">&#9660; show details</label>
     </td></tr>
-    <tr class="togC"><td>[alpbetically sorted] all</td><td id="allLoaded"></td></tr>
+    <tr class="togC"><td>[alphabetically sorted] all</td><td id="allLoaded"></td></tr>
     <tr class="togC"><td colspan="2"></td></tr>
     <tr><td colspan="2"><span class="no_color">chrome:// code based on work by </span>
       <a target="_blank" class="blue" href="https://privacycheck.sec.lrz.de/index.html">privacycheck.sec.lrz.de</a></td></tr>
