--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -162,12 +162,6 @@
         <div class="nav-up"><a href="#useragent">&#9650;</a></div>
         <div class="nav-down"><a href="#chrome">&#9660;</a></div></div>
     </th></tr></thead>
-    <tr><td colspan="2" class="intro"><span class="no_color">
-      The <code>chrome://</code> list from
-      <a target="_blank" class="blue" href="https://privacycheck.sec.lrz.de/index.html">privacycheck.sec.lrz.de</a> was created from
-      all Firefox 10-62 releases, for Windows/Linux/Mac, and does not include any new resources which may be present in subsequent
-      releases. This test removed one item, <code>chrome://global/content/minimal-xul.css</code>, for stability purposes on this site.</span>
-    </td></tr>
     <tr><td>1st edition</td><td class="mono" id="math1hash"></td></tr>
     <tr><td>6th edition</td><td class="mono" id="math6hash"></td></tr>
     <tr><td>combined</td><td class="mono" id="mathhash"></td></tr>
@@ -201,6 +195,11 @@
         <div class="nav-up"><a href="#math">&#9650;</a></div>
         <div class="nav-down"><a href="#language">&#9660;</a></div></div>
     </th></tr></thead>
+    <tr><td colspan="2" class="intro"><span class="no_color">The <code>chrome://</code> list from
+      <a target="_blank" class="blue" href="https://privacycheck.sec.lrz.de/index.html">privacycheck.sec.lrz.de</a> was created from
+      all Firefox 10-62 releases, for Windows/Linux/Mac, and does not include any new resources which may be present in subsequent
+      releases. This test removed one item, <code>chrome://global/content/minimal-xul.css</code>, for stability purposes on this site.</span>
+    </td></tr>
     <tr><td>images</td><td class="mono" id="imgHash"></td></tr>
     <tr><td>js</td><td class="mono" id="jsHash"></td></tr>
     <tr><td>css</td><td class="mono" id="cssHash"></td></tr>
@@ -210,8 +209,8 @@
         <label for="collapseC" class="lbl-toggle" id="labelC">&#9660; show details</label>
     </td></tr>
     <tr class="togC">
-      <td>[alphabetically sorted] all<br><br><button class="button4" onClick="copyclip(`allLoaded`)">copy to clipboard</button></td>
-      <td id="allLoaded"></td>
+     <td>[alphabetically sorted] all<br><br><button class="button4" onClick="copyclip(`allLoaded`)">copy to clipboard</button></td>
+     <td id="allLoaded"></td>
     </tr>
     <tr class="togC"><td colspan="2"></td></tr>
     <tr><td colspan="2"><span class="no_color">chrome:// code based on work by </span>
